vlib/v/checker/tests/sync_stdatomic_compile_err.out
vlib/sync/stdatomic/atomic.c.v:85:3: error: atomic: only support number, bool, and voidptr types
   83 |         }
   84 |     } $else {
   85 |         $compile_error('atomic: only support number, bool, and voidptr types')
      |         ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
   86 |     }
   87 |     return unsafe { nil }
called from vlib/v/checker/tests/sync_stdatomic_compile_err.vv:3:6
    1 | import sync.stdatomic {new_atomic}
    2 | 
    3 | _ := new_atomic(`1`)
      |      ~~~~~~~~~~~~~~~
