vlib/v/checker/tests/sync_stdatomic_compile_err.vv
import sync.stdatomic {new_atomic}

_ := new_atomic(`1`)
